--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@ tags: index
       <a href="portfolio" class="button button-portfolio caps mt1">Portfolio</a>
     </div>
     <div class="col sm-col-7 md-col-8 p3">
-      <div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
-        <img class="css-device__image" src="images/quitocrimemap.jpg" alt="Crimen en Quito">
+      <div class="projects-item">
+        <div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
+          <img class="css-device__image" src="images/quitocrimemap.jpg" alt="Crimen en Quito">
+        </div>
+        <div class="projects-overlay">
+          <h4>Quito Crime Map <i class="fa fa-arrow-right"></i></h4>
+        </div>
       </div>
     </div>
-    <div class="col col-12 p3">
+    <div class="col col-12 p2">
       <a href="portfolio/nocturna.html"><div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
         <img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna">
       </div></a>
