--- a/index.html
+++ b/index.html
@@ -15,26 +15,27 @@ tags: index
       <h2 class="white">Selected Work</h2>
       <a href="portfolio" class="button button-portfolio caps mt1">Portfolio</a>
     </div>
+
     <div class="col sm-col-7 md-col-8 px3 mt2">
-      <div class="projects-item">
+      <a href="portfolio/quitomap.html"><div class="projects-item">
         <div class="css-device css-device--browser" data-url="http://ferandrade.com/quito-crime-map/">
           <img class="css-device__image" src="images/quitocrimemap.jpg" alt="Crimen en Quito">
         </div>
-        <a href="portfolio/map.html"><div class="projects-overlay">
+        <div class="projects-overlay">
           <h4>Quito Crime Map <i class="fa fa-arrow-right"></i></h4>
-        </div></a>
-      </div>
+        </div>
+      </div></a>
     </div>
 
-    <div class="col col-12 px3 mt2">
-      <div class="projects-item">
+    <div class="col col-12 px3 mt4">
+      <a href="portfolio/nocturna.html"><div class="projects-item">
         <div class="css-device css-device--browser" data-url="http://nocturna.com/">
           <img class="css-device__image" src="images/nocturna.jpg" alt="Nocturna">
         </div>
-        <a href="portfolio/nocturna.html"><div class="projects-overlay">
+        <div class="projects-overlay">
           <h4>Nocturna Ediciones <i class="fa fa-arrow-right"></i></h4>
-        </div></a>
-      </div>
+        </div>
+      </div></a>
     </div>
 
   </div>
