--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ tags: index
   <div class="clearfix">
     <div class="col sm-col-5 md-col-4 p3 mt3">
       <h2 class="white">Selected Work</h2>
-      <a href="portfolio" class="button button-portfolio caps mt1">Portfolio</a>
+      <a href="portfolio" class="button-sp button-portfolio caps mt1">Portfolio</a>
     </div>
 
     <div class="col sm-col-7 md-col-8 px3 mt2">
