--- a/portfolio/quitomap.html
+++ b/portfolio/quitomap.html
@@ -16,7 +16,7 @@ tags: work
   </div>
   <div class="flex-none col-9 border-box">
     <p class="left-align"> An interactive crime map that shows the crime rate of Quito as reported by Policía Nacional del Ecuador. </p>
-    <p class="right-align"><a href="http://ferandrade.com/quito-crime-map/" class="button-sp button-portfolio caps mt1">View</a> <span class="italic">January, 2016</span></p>
+    <p class="right-align"><a href="http://ferandrade.com/quito-crime-map/" class="caps">VIEW SITE</a>. <span class="italic">January, 2016</span></p>
 
   </div>
 </div>
