--- a/portfolio/quitomap.html
+++ b/portfolio/quitomap.html
@@ -15,7 +15,7 @@ tags: work
     </ul>
   </div>
   <div class="flex-none col-9 border-box">
-    <p class="left-align"> An interactive crime map that shows the crime rate of Quito as reported by Policía Nacional del Ecuador. </p>
+    <p class="left-align"> An interactive crime map that shows the crime rate of Quito as reported by Policía Nacional del Ecuador. <a href="http://ferandrade.com/quito-crime-map/">VIEW SITE</a></p>
     <p class="right-align"> <span class="italic">January, 2016</span></p>
 
   </div>
